# audio-transcribe-and-summarize

./: .gitignore  README.md  pyproject.toml
src/audio_transcribe_and_summarize/: extract_audio.py  main.py  summarize_text.py  transcribe_audio.py
tests/: test_extract_audio.py  test_summarize_text.py  test_transcribe_audio.py
